--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
         minSdkVersion 16
         targetSdkVersion 30
         multiDexEnabled true
-        versionCode 19
-        versionName "2.5.2"
+        versionCode 20
+        versionName "2.6"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -19,6 +19,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+        compileOptions {
+            sourceCompatibility 1.8
+            targetCompatibility 1.8
+        }
 }//gs bbh
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
@@ -47,10 +51,12 @@ dependencies {
         implementation 'com.google.android.gms:play-services-ads:19.4.0'
         implementation 'com.google.firebase:firebase-messaging:21.0.1'
         implementation 'androidx.appcompat:appcompat:1.0.2'
+        implementation 'com.android.support:multidex:1.0.3'
     })
     implementation "androidx.core:core-ktx:+"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
+
 apply plugin: 'com.google.gms.google-services'
 repositories {
     maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
